--- a/style.css
+++ b/style.css
@@ -107,11 +107,21 @@
     width: 300px;
     height: 300px;
 }
+.img3{
+    width: 300px;
+    height: 500px; 
+}
 
 .video1{
     width:700px;
     height:480px;
+    padding: none;
+    margin: none;
+    line-height: none;
 }
+
+
+
 
 
 
@@ -127,6 +137,7 @@
     
     p{
         font-size: 15px; 
+        
     }
 
     .p1{
